fix(testlib): remove trailing newline in test vectors
Signed-off-by: Lorenzo Delgado <lnsdev@proton.me>

--- a/testlib/parser-testdata/data/__templates__/vector.rs.jinja
+++ b/testlib/parser-testdata/data/__templates__/vector.rs.jinja
@@ -7,8 +7,7 @@
 /// ```
 ///
 /// See file: `{{ data_set }}/{{ name }}.graphql`
-pub const {{ name | upper | replace("/","_") }}: &str = indoc::indoc! {r###"
+pub const {{ name | upper | replace("/","_") }}: &str = indoc::indoc! { r###"
 {% for line in content -%}
-{{ line |  indent(2, true) }}
+{{ line |  indent(2, true) }} {%- if loop.last %}"### };{% endif %}
 {% endfor -%}
-"###};
